feat: :sparkles: get best avrage price
