# src/market/delivery/http/handlers.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/MMN3003/mega/src/logger"
 	"github.com/MMN3003/mega/src/market/usecase"
+	"github.com/shopspring/decimal"
 
 	"github.com/gin-gonic/gin"
 )
@@ -21,6 +22,7 @@ func NewHandler(s *usecase.Service, l *logger.Logger) *Handler {
 
 func (h *Handler) RegisterRoutes(r *gin.Engine) {
 	r.GET("/markets", h.ListPairs)
+	r.PUT("/market/best-price", h.GetBestExchangePriceByVolume)
 	r.GET("/health", func(c *gin.Context) {
 		c.JSON(http.StatusOK, gin.H{"status": "ok"})
 	})
@@ -46,4 +48,45 @@ func (h *Handler) ListPairs(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, FetchAndUpdateMarketsResponseFromDomain(markets))
+}
+
+// GetBestExchangePriceByVolume godoc
+//
+//	@Summary		Get best exchange price by volume
+//	@Description	Get the best exchange price for a given market and volume
+//	@Tags			market
+//	@Accept			json
+//	@Produce		json
+//	@Param			request	body		GetBestExchangePriceByVolumeRequestBody	true	"Request body"
+//	@Success		200	{object}	GetBestExchangePriceByVolumeResponse
+//	@Failure		400	{object}	object{error=string}
+//	@Failure		500	{object}	object{error=string}
+//	@Router			/market/best-price [put]
+func (h *Handler) GetBestExchangePriceByVolume(c *gin.Context) {
+	ctx := c.Request.Context()
+	// get data from body
+	var req GetBestExchangePriceByVolumeRequestBody
+	if err := c.ShouldBindJSON(&req); err != nil {
+		h.logger.Errorf("GetBestExchangePriceByVolume err: %v", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid request"})
+		return
+	}
+	marketName := req.MarketName
+	volumeStr := req.Volume
+
+	volume, err := decimal.NewFromString(volumeStr)
+	if err != nil {
+		h.logger.Errorf("GetBestExchangePriceByVolume err: %v", err)
+		c.JSON(http.StatusBadRequest, gin.H{"error": "invalid volume"})
+		return
+	}
+
+	price, exchangeName, err := h.service.GetBestExchangePriceByVolume(ctx, marketName, volume)
+	if err != nil {
+		h.logger.Errorf("GetBestExchangePriceByVolume err: %v", err)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "internal server error"})
+		return
+	}
+
+	c.JSON(http.StatusOK, GetBestExchangePriceByVolumeResponse{Price: price, ExchangeName: exchangeName})
 }
